--- a/projects/token-based-voting/package.json
+++ b/projects/token-based-voting/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.1",
+    "dotenv": "^16.3.1",
     "ethers": "^6.9.0",
     "hardhat-ethers": "^1.0.1",
     "hardhat-gas-reporter": "^1.0.9"
